fixed status page error overlay alignment

--- a/static/css/powfaucet.css
+++ b/static/css/powfaucet.css
@@ -188,6 +188,10 @@ html, body {
   text-align: left;
 }
 
+#ipinfo-tooltip .ipaddr-info.claim-error {
+  max-width: 500px;
+}
+
 #ipinfo-tooltip .ipaddr-info > table {
   width: 100%;
 }
